# Ergodeon

./: .gitignore  README.md  env.example  pyproject.toml  run_demo.sh  run_demo_web.sh
V2/: COMPLETION_REPORT.md  DEVELOPMENT.md  FILES_CREATED.md  FINAL_COMPLETION_REPORT.md  LLM_INTEGRATION_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SUMMARY.md  doc-1.md
V2/agents/: README.md
V2/agents/bugfix-workflow/: api.md  workflow.md
V2/agents/context-gatherer/: api.md  workflow.md
V2/agents/custom-agent-creator/: api.md  workflow.md
V2/agents/feature-design-first-workflow/: api.md  workflow.md
V2/agents/feature-requirements-first-workflow/: api.md  workflow.md
V2/agents/general-task-execution/: api.md  workflow.md
V2/agents/spec-task-execution/: api.md  workflow.md
V2/architecture/: .dockerignore  .env.docker  .env.example  ARCHITECTURE.md  DOCKER.md  Dockerfile  Dockerfile.ui  LLM_INTEGRATION.md  Makefile  README.md  config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
V2/architecture/agents/: __init__.py  custom_agent_creator.py
V2/architecture/agents/analysis/: __init__.py  context_gatherer.py
V2/architecture/agents/execution/: __init__.py  general_task.py  spec_task.py
V2/architecture/agents/workflow/: __init__.py  bugfix.py  design_first.py  requirements_first.py
V2/architecture/core/: __init__.py  base_agent.py  events.py  llm_client.py  memory.py  orchestrator.py  state.py
V2/architecture/examples/: basic_usage.py  llm_usage.py
V2/architecture/models/: __init__.py  agent.py  task.py  workflow.py
V2/architecture/src/: __init__.py  api.py  cli.py  main.py
V2/architecture/src/ui/: __init__.py  app.py
V2/architecture/tests/: conftest.py
V2/architecture/tests/unit/: test_base_agent.py  test_llm_client.py  test_memory.py  test_models.py  test_orchestrator.py
V2/architecture/tools/: __init__.py  registry.py
V2/architecture/utils/: __init__.py  config.py  logger.py
V2/prompts/: README.md  SYSTEM_OVERVIEW.md
V2/prompts/bugfix-workflow/: prompt.md
V2/prompts/context-gatherer/: examples.md  prompt.md
V2/prompts/core-orchestrator/: prompt.md  rules.md
V2/prompts/custom-agent-creator/: prompt.md
V2/prompts/feature-design-first-workflow/: prompt.md
V2/prompts/feature-requirements-first-workflow/: prompt.md
V2/prompts/general-task-execution/: examples.md  prompt.md
V2/prompts/spec-task-execution/: prompt.md
demo/: cli.py  reproduce_issue.py  verify_advanced_tools.py  verify_agent.py  verify_tools.py
memory/: .gitkeep  episodes.json
promt/: chat_mode.md  prompt_checklist.md  prompt_classify_workflow.md  prompt_execute_step.md  prompt_implementation_plan.md  prompt_parse_request.md  prompt_project_digest.md  prompt_review_comments.md  prompt_walkthrough.md  research_mode.md  system_base.md
research/: analiz.sh
research/sbor/llm-om_2/: config.py  executor.py  intent.py  planner.py
research/sbor/planing_1/: 03-prompts.md  05-config-and-errors.md
research/todo/: todo.md
reserch/sbor/llm-om_2/: agent.py  llm_client.py  main.py  memory.py  utils.py
reserch/sbor/planing_1/: 01-architecture.md  02-stages-detail.md  04-review-and-implementation.md
reserch/todo/: docker_executor_concept.py  todo.md
src/openrouter_agent/agent/: config.py  context_manager.py  core.py  doc_generator.py  intent.py  memory.py  planner.py  prompts.py  sandbox.py  scanner.py  stage_manager.py  unified_router.py  workflow_classifier.py  workflow_registry.py
src/openrouter_agent/server/: agent_session.py  app.py  events.py
src/openrouter_agent/tools/: base.py  code.py  filesystem.py  json_edit.py  reasoning.py  registry.py  system.py  web.py
src/openrouter_agent/utils/: __init__.py
web/: index.html  package-lock.json  package.json  readme.md  vite.config.js
web/src/: App.svelte
web/src/components/: Chat.svelte  ConfirmDialog.svelte  Input.svelte  LogStream.svelte  OnboardingModal.svelte  StatusBar.svelte
web/src/lib/: socket.js
