[project]
name = "openrouter-agent"
version = "0.1.0"
description = "Ergodeon - autonomous code orchestration agent"
requires-python = ">=3.10"
dependencies = [
    "litestar>=2.12.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "msgspec>=0.18.6",
    "python-socketio>=5.11.0",
    "websockets>=12.0",
    "rich>=13.7.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "requests>=2.31.0",
    "jsonpath-ng>=1.6.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openrouter_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
